--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ server.port=8080
 # Gmail SMTP Config
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=karthikeyatvs2004@gmail.com
-spring.mail.password=yzjulltqqstfkgfx
+spring.mail.username=<email>
+spring.mail.password=<password>
 
 # Enable TLS and SMTP auth
 spring.mail.properties.mail.smtp.auth=true
